--- a/about.html
+++ b/about.html
@@ -26,20 +26,25 @@
     <header class="mb-auto">
       <h3 class="float-md-start mb-0">Greg's Rock Shop</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link active" aria-current="page" href="about.html">About</a>
       </nav>
     </header>
 
     <!-- Content -->
     <main class="px-3">
-      <h1>More info about my rocks coming soon.</h1>
-      <p class="lead"></p>
+      <div class="row">
+        <div class="col-lg-3">
+          <img src="img/IMG_7829.jpg" class="rounded-circle" width="210" height="210" role="img" aria-label="Placeholder: 210x210" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
+        </div>
+        <div class="col my-auto">
+          <h3 class="mt-2 text-start">Hi, I'm Greg! I have a passion for rocks and love sharing that passion with others. I can be occassionally near city park selling my latest finds.</h3>
+        </div>
     </main>
 
     <!-- Footer -->
     <footer class="mt-auto text-white-50">
-      <p>© Greg DeMoully 2021</p>
+      <p>© Greg DeMoully 2021.</p>
     </footer>
   </div>
 
