--- a/about.html
+++ b/about.html
@@ -34,11 +34,11 @@
     <!-- Content -->
     <main class="px-3">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 py-3">
           <img src="img/IMG_7829.jpg" class="rounded-circle" width="210" height="210" role="img" aria-label="Placeholder: 210x210" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/>
         </div>
         <div class="col my-auto">
-          <h3 class="mt-2 text-start">Hi, I'm Greg! I have a passion for rocks and love sharing that passion with others. I can be occassionally near city park selling my latest finds.</h3>
+          <h3 class="mt-2 text-start">Hi, I'm Greg! I have a passion for rocks and love sharing that passion with others. I can be occassionally found near City Park selling my latest finds.</h3>
         </div>
     </main>
 
